# expense-tracker-be

./: .coverage  .env  .gitignore  README.md  alembic copy.ini  alembic.ini  architecture.mmd  backlog.md  docker-compose.yml  expense-tracker.code-workspace  health-check.md  initial-design-and-roadmap-v2.md  initial-design-and-roadmap.md  project_struct_tree.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_11_07_2030_f9b3a9506e85_initial_migration.py  2024_11_07_2035_1ec723a7a736_add_missing_constraints.py  3549ef2d86d2_create_users_and_categories_tables.py  a2e70ed5ecaa_initial_migration.py
expense_tracker/: __init__.py  main.py
expense_tracker/api/v1/endpoints/: auth.py  categories.py  expenses.py  users.py
expense_tracker/core/: auth.py  config.py  exceptions.py  security.py  settings.py
expense_tracker/db/: __init__.py  base.py  session.py
expense_tracker/models/: __init__.py  base.py  category.py  expense.py  shared_expense.py  user.py
expense_tracker/schemas/: __init__.py  auth.py  base.py  category.py  expense.py  queries.py  shared_expense.py  token.py  user.py
expense_tracker/services/: auth.py  base.py  expense.py  user.py
expense_tracker/tests/: conftest.py  prepare_test_db.md  test_auth.py  test_db_connection.py  test_users.py  utils.py
expense_tracker/tests/api/: test_user_endpoints.py
expense_tracker/tests/services/: test_user_service.py
scripts/: init_db.py  init_users.py  seed_db.py  test_db_connectivity.py  test_db_tables.py
test/: conftest.py  test_users.py
